Correct fort-size and weight Center align button-container class

--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -13,7 +13,7 @@ body {
 .title, .content, .button-container {
   background: #e3f4ff;
   margin: 6px 7px;
-  padding: 10px;
+  padding: 5px;
 }
 
 button {
@@ -21,6 +21,21 @@ button {
   border: 1px solid #eee;
 }
 
-h1 {
-  font-size: larger;
+.title {
+  font-size: 15px;
+  font-weight: 1000;
+}
+
+.content {
+  font-size: 15px;
+}
+
+button {
+  display: block;
+  margin: 0px auto;
+}
+
+.button-container {
+  font-size: 15px;
+  text-align: center;
 }
